@@ -1,9 +1,9 @@
-MD5 2d6fb4803bfffe8f86134284d19ed401 ChangeLog 1608
-MD5 ffa1c95563247745f132bce911573500 cjkcodecs-1.0.2.ebuild 640
-MD5 08c0eac983cfe55dff34d091924c3309 cjkcodecs-1.0.3.ebuild 659
 MD5 e6ec95440488dff7c374761498f15de8 cjkcodecs-1.0.ebuild 635
-MD5 3601a536a918429ab12a03b46088e91d cjkcodecs-1.1.1.ebuild 663
-MD5 71c4638c9c88af75b58e5f5cb54fe008 metadata.xml 159
+MD5 49d3b5cc2a137027657a74b7d1602d95 ChangeLog 1739
+MD5 6ac60b0f4345fe461dcf1c86ca459f68 metadata.xml 176
+MD5 ffa1c95563247745f132bce911573500 cjkcodecs-1.0.2.ebuild 640
+MD5 c0b82d627a84ba3b75cde4bf3fae41ff cjkcodecs-1.0.3.ebuild 658
+MD5 584a0e63053aa98784e3c8cba563c5c7 cjkcodecs-1.1.1.ebuild 662
 MD5 fe55aaf14f85bb1bca60f19f40e02e60 files/digest-cjkcodecs-1.0 65
 MD5 ed462808d32026657155f1dff6cdd1e2 files/digest-cjkcodecs-1.0.2 68
 MD5 45fc7efdd09f88205d5a0a1bb4d20daa files/digest-cjkcodecs-1.0.3 68
