@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cjkcodecs/cjkcodecs-1.0.3.ebuild,v 1.5 2005/01/31 02:25:23 fserb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cjkcodecs/cjkcodecs-1.0.3.ebuild,v 1.6 2005/07/02 07:11:42 usata Exp $
 
 inherit distutils
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://cjkpython.i18n.org/"
 IUSE=""
 SLOT="0"
 LICENSE="BSD"
-KEYWORDS="~alpha ~ppc ~x86 ppc64"
+KEYWORDS="~alpha ~ppc x86 ppc64"
 
 DEPEND=">=dev-lang/python-2.1"
 DOCS="doc/*"
