@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/cjkcodecs
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cjkcodecs/ChangeLog,v 1.12 2005/07/01 11:16:40 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cjkcodecs/ChangeLog,v 1.13 2005/07/02 07:11:42 usata Exp $
+
+  02 Jul 2005; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
+  cjkcodecs-1.0.3.ebuild, cjkcodecs-1.1.1.ebuild:
+  Stable on x86.
 
   01 Jul 2005; Simon Stelling <blubb@gentoo.org> cjkcodecs-1.1.1.ebuild:
   added ~amd64 keyword
